# Tagger3D

./: .cproject  .gitignore  .project  README.md  crossvalid.sh  log.log.1
Disseration/: .~lock.results.ods#  a.eap  abstract.aux  abstract.tex  abstract.tex.backup  architecture.aux  architecture.tex  architecture.tex.backup  article.aux  article.bbl  article.bib  article.bib.backup  article.blg  article.dvi  article.lof  article.lot  article.out  article.tex  article.tex.backup  article.toc  b.eap  bow.aux  bow.tex  conclusion.aux  conclusios.aux  datasets.aux  datasets.tex  datasets.tex.backup  disseration.kilepr  experiments.aux  experiments.tex  experiments.tex.backup  introduction.aux  introduction.tex  introduction.tex.backup  libs.aux  libs.tex  notes.ods  results.ods  setup.aux  (+8 more)
Disseration/ppt/: inz.kilepr  main.aux  main.nav  main.out  main.snm  main.tex  main.tex.backup  main.toc  main.vrb
Results/: .~lock.results.ods#  results.ods
Tools/: test.txt  train.txt  train.txt.scale.out
config/: .config.ini.swp  .config.swp  .fuse_hidden0000099800000012  1config.ini  b3do.ini  config  config.ini  cv_confing.ini  settings.txt  test.ini  tokyo.ini
docs/dissertation/: eng.kilepr  experiments.tex  introduction.tex  titlepage.tex
docs/eng/: architecture.tex  eng.kilepr  eng.tex
docs/kkr13/: kkr13-eng.bst  kkr13-eng.sty  kkr13-eng.tdo  kkr13-eng.tex  kkr13-eng.tex.backup  kkr13.kilepr
docs/min/: kkr13-eng.tex  kkr13-eng.tex.backup  kkr13.kilepr
docs/others/: results.ods
docs/piap/: Formularz Do Konkursu Młodzi Innowacyjni 2014.doc  Opinia Młodzi Innowacyjni 2014.doc  Regulamin_MI_2014.doc
docs/piap/monografia/: kkr13-eng.tex  kkr13.bib
docs/plakat/: plakat.odt
docs/ppt/: ppt.kilepr  ppt.tex  ppt.tex.backup
src/: CMakeLists.txt  CMakeSettings.h  main.cpp
src/CMakeScripts/: CMakeSettings.h.cmake  Findlog4cxx.cmake
src/Cluster/: Cluster.cpp  Cluster.h  KMeansCluster.cpp  KMeansCluster.h
src/Common/: Factory.cpp  Factory.h  ProcessObject.cpp  ProcessObject.h  Tagger3D.cpp  Tagger3D.h  Utils.cpp  Utils.h  clouds.h  logger.h
src/Config/: Config.cpp  Config.h
src/Descriptor/: Descriptor.cpp  Descriptor.h  FPFHDescriptor.cpp  FPFHDescriptor.h  GpuDescriptor.cpp  GpuDescriptor.h  PFHDescriptor.cpp  PFHDescriptor.h  PFHRGBDescriptor.cpp  PFHRGBDescriptor.h  PFHRGBgpu.cpp  PFHRGBgpu.h  ShotColorDescriptor.cpp  ShotDescriptor.cpp  ShotDescriptor.h
src/Descriptor/CloudParser/: CloudParser.cpp  CloudParser.h  PfhTraits.h
src/Detector/: AGASTDetector.cpp  AGASTDetector.h  DenseDetector.h  Detector.cpp  Detector.h  Iss3dDetector.cpp  Iss3dDetector.h  SIFTDetector.cpp  SIFTDetector.h  SusanDetector.cpp  SusanDetector.h
src/ImgReader/: ImgReader.cpp  ImgReader.h  PcdReader.cpp  PcdReader.h  RangeImgReader.cpp  RangeImgReader.h
src/PointNormal/: NormalEstimator.cpp  NormalEstimator.h  PointNormal.h
src/Predictor/: CvSVMPredictor.cpp  CvSVMPredictor.h  LibSVMPredictor.cpp  Predictor.cpp  Predictor.h  SVMPredictor.cpp  SVMPredictor.h  SldaPredictor.cpp  SldaPredictor.h
src/Predictor/slda/: corpus.cpp  corpus.h  opt.cpp  settings.h  slda.cpp  slda.h
src/Predictor/svm/: svm-predict.c  svm-train.c
src/Utilities/: IoUtils.cpp  Utils.h  VectorIO.h
utils/: .project  source.sh
utils/B3doPrep/: .cproject  .project
utils/B3doPrep/src/: CMakeLists.txt
utils/ListsPrep/: .project  .pydevproject  divImgsByCats.py  imgListPrep.py
utils/PcdPrep/: .cproject
utils/PcdPrep/src/: CMakeLists.txt  main.cpp
utils/PcdPrep/src/B3DO/: AnnotatedObjectExtractor.cpp  AnnotatedObjectExtractor.h  main
utils/PcdPrep/src/PcdCreator/: TokyoCreator.cpp  TokyoCreator.h
utils/libsvm_scripts/: prepare_data.py
utils/princeton/: kmeans.c
utils/src/: CMakeLists.txt
utils/src/Cluster/: FisherCluster.cpp  FisherCluster.h
utils/src/Common/: Factory.h  ProcessObject.cpp  ProcessObject.h  Tagger3D.cpp  Tagger3D.h  clouds.h
utils/src/Descriptor/: PFHDescriptor.cpp  ShotColorDescriptor.h
utils/src/Descriptor/CloudParser/: CloudParser.h  PfhTraits.h
utils/src/Detector/: DenseDetector.cpp  Detector.cpp  Detector.h  SIFTDetector.h
utils/src/ImgReader/: .fuse_hidden00000dda00000005  ImgReader.h  RangeImgReader.h
utils/src/PointNormal/: NormalEstimator.cpp  NormalEstimator.h  PointNormal.cpp
utils/src/Predictor/: CvSVMPredictor.cpp  CvSVMPredictor.h  LibSVMPredictor.cpp  LibSVMPredictor.h  Predictor.cpp
utils/src/Utilities/: IoUtils.h  TypeTraits.h  Utils.cpp  VectorIO.h
